[gd_scene load_steps=6 format=3 uid="uid://cfknqqnc3u3f8"]

[ext_resource type="Script" path="res://UI/setting.gd" id="1_5qkmm"]
[ext_resource type="Texture2D" uid="uid://3shyh2k76cat" path="res://Assets/EndLevelRect.png" id="3_pxl3u"]
[ext_resource type="Texture2D" uid="uid://hehbx76cuk70" path="res://Assets/next.png" id="4_8856h"]
[ext_resource type="Texture2D" uid="uid://cq4p1wwiid4jo" path="res://Assets/next_hover.png" id="5_kfntj"]
[ext_resource type="LabelSettings" uid="uid://cdo1rbe1us7ji" path="res://Assets/pixeboy_label_settings.tres" id="6_vph2u"]

[node name="Setting" type="CanvasLayer"]
script = ExtResource("1_5qkmm")
metadata/_edit_horizontal_guides_ = [82.0, 60.0, 104.0]
metadata/_edit_vertical_guides_ = [62.0]

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -72.0
offset_right = 119.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pxl3u")

[node name="DoneButton" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -44.0
offset_right = 24.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_8856h")
texture_hover = ExtResource("5_kfntj")

[node name="MasterVolumeSlider" type="HSlider" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -38.0
offset_right = 99.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
min_value = -80.0
max_value = 0.0

[node name="MasterVolumeLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -38.0
offset_right = 19.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Master Volume"
label_settings = ExtResource("6_vph2u")

[node name="MusicVolumeSlider" type="HSlider" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -16.0
offset_right = 99.0
grow_horizontal = 2
grow_vertical = 2
min_value = -80.0
max_value = 0.0

[node name="MusicVolumeLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -17.0
offset_right = -10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Music Volume"
label_settings = ExtResource("6_vph2u")

[node name="EffectVolumeSlider" type="HSlider" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 6.0
offset_right = 99.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
min_value = -80.0
max_value = 0.0

[node name="EffectVolumeLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = 5.0
offset_right = -7.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "Effect Volume"
label_settings = ExtResource("6_vph2u")

[connection signal="mouse_entered" from="DoneButton" to="." method="_on_done_button_mouse_entered"]
[connection signal="pressed" from="DoneButton" to="." method="_on_done_button_pressed"]
[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="EffectVolumeSlider" to="." method="_on_effect_volume_slider_value_changed"]
